@@ -3814,6 +3814,11 @@ void menu_audio_msx_mic(MENU_ITEM_PARAMETERS)
     msx_sound_cassette_out.v ^=1;
 }
 
+void menu_audio_svi_mic(MENU_ITEM_PARAMETERS)
+{
+    svi_sound_cassette_out.v ^=1;
+}
+
 void menu_settings_audio(MENU_ITEM_PARAMETERS)
 {
         menu_item *array_menu_settings_audio;
@@ -4003,6 +4008,13 @@ void menu_settings_audio(MENU_ITEM_PARAMETERS)
         if (MACHINE_IS_MSX) {
             menu_add_item_menu_format(array_menu_settings_audio,MENU_OPCION_NORMAL,menu_audio_msx_mic,NULL,
                 "[%c] Enable Cassette Out sound",(msx_sound_cassette_out.v ? 'X' : ' '));
+                menu_add_item_menu_tooltip(array_menu_settings_audio,"Allow to hear Cassette Out sound");
+                menu_add_item_menu_ayuda(array_menu_settings_audio,"Allow to hear Cassette Out sound");
+        }
+
+        if (MACHINE_IS_SVI) {
+            menu_add_item_menu_format(array_menu_settings_audio,MENU_OPCION_NORMAL,menu_audio_svi_mic,NULL,
+                "[%c] Enable Cassette Out sound",(svi_sound_cassette_out.v ? 'X' : ' '));
                 menu_add_item_menu_tooltip(array_menu_settings_audio,"Allow to hear Cassette Out sound");
                 menu_add_item_menu_ayuda(array_menu_settings_audio,"Allow to hear Cassette Out sound");
         }
